--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "author": "alexandre",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "hbs": "^4.2.0"
+    "hbs": "^4.2.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.2.0",
+    "mongoose": "^7.0.3",
+    "validator": "^13.9.0"
   }
 }
