--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "digital-clock-wb",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "^10 || ^19"
+  },
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
@@ -15,6 +18,8 @@
     "express": "^4.18.2",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.2.0",
+    "mongoose": "^7.0.3",
     "validator": "^13.9.0"
   }
 }
