--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "engines": {
-    "node": "^10 || ^19"
+    "node": "14.15.0"
   },
   "main": "src/app.js",
   "scripts": {
